[gd_scene load_steps=6 format=3 uid="uid://ceu771rqxpk0b"]

[ext_resource type="PackedScene" uid="uid://bkadht57160lf" path="res://scenes/paddle.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bi7605jfeqowh" path="res://scenes/ball.tscn" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://c0xmcjakp571o" path="res://scenes/manager.gd" id="3_sugp2"]

[sub_resource type="LabelSettings" id="LabelSettings_0wfyh"]
font_size = 128
font_color = Color(0.29803923, 0.29803923, 0.29803923, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(1208, 10)

[node name="main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -341.5
offset_right = 4.0
offset_bottom = 341.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.29803923, 0.29803923, 0.29803923, 1)

[node name="AIScore" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -44.0
offset_right = 36.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_0wfyh")

[node name="PlayerScore" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -87.5
offset_right = 73.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_0wfyh")

[node name="Ball" parent="." instance=ExtResource("2_0wfyh")]
z_index = 10
position = Vector2(576, 324)
collision_layer = 4
collision_mask = 3

[node name="Player" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(1122, 324)
SPEED = 400

[node name="AI" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(30, 324)
AI = true
SPEED = 200

[node name="Walls" type="Node2D" parent="."]

[node name="TopBorder" type="StaticBody2D" parent="Walls"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopBorder"]
position = Vector2(562, -5)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="BottomBorder" type="StaticBody2D" parent="Walls"]
position = Vector2(5, 658)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomBorder"]
position = Vector2(562, -5)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="manager" type="Node" parent="."]
script = ExtResource("3_sugp2")

[connection signal="ai_score" from="Ball" to="manager" method="_on_ball_ai_score"]
[connection signal="player_score" from="Ball" to="manager" method="_on_ball_player_score"]
